[tool.poetry]
name = "gridworks-atn"
version = "0.2.1"
description = "Gridworks Atn Spaceheat"
authors = ["Jessica Millar <jmillar@gridworks-consulting.com>"]
license = "None"
readme = "README.md"
homepage = "https://github.com/thegridelectric/gridworks-atn"
repository = "https://github.com/thegridelectric/gridworks-atn"
documentation = "https://gridworks-atn.readthedocs.io"
packages = [
    { include = "gwatn", from = "src" },
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
]

[tool.poetry.urls]
Changelog = "https://github.com/thegridelectric/gridworks-atn/releases"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
gridworks = "^0.0.15"
gridworks-protocol = "^0.1.5"
boto3 = "^1.26.3"
paho-mqtt = "^1.6.1"

types-requests = "^2.28.11.2"
numpy = "^1.23.4"



[tool.poetry.dev-dependencies]
Pygments = ">=2.10.0"
black = ">=21.10b0"
coverage = {extras = ["toml"], version = ">=6.2"}
darglint = ">=1.8.1"
flake8 = ">=4.0.1"
flake8-bandit = ">=2.1.2"
flake8-bugbear = ">=21.9.2"
flake8-docstrings = ">=1.6.0"
flake8-rst-docstrings = ">=0.2.5"
furo = ">=2021.11.12"
isort = ">=5.10.1"
mypy = ">=0.930"
pep8-naming = ">=0.12.1"
pre-commit = ">=2.16.0"
pre-commit-hooks = ">=4.1.0"
pytest = ">=6.2.5"
pyupgrade = ">=2.29.1"
safety = ">=1.10.3"
sphinx = ">=4.3.2"
sphinx-autobuild = ">=2021.3.14"
sphinx-click = ">=3.0.2"
typeguard = ">=2.13.3"
xdoctest = {extras = ["colors"], version = ">=0.15.10"}
myst-parser = {version = ">=0.16.1"}

[tool.poetry.scripts]
gridworks-atn = "gwatn.__main__:main"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.17.0"

[tool.coverage.paths]
source = ["src", "*/site-packages"]
tests = ["tests", "*/tests"]

[tool.coverage.run]
branch = true
source = ["gwatn", "tests"]

[tool.coverage.report]
show_missing = true
fail_under = 20

[tool.isort]
profile = "black"
force_single_line = true
lines_after_imports = 2

[tool.mypy]
strict = true
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
